--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.4"
+    "vue": "^3.0.4",
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
+    "sass": "^1.22.10",
+    "sass-loader": "^7.3.1",
     "vite": "^1.0.0-rc.13"
   }
 }
